Fix scrollbar issue and add Github and TOP links

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -31,7 +32,7 @@ html, body {
     font-size: 1.8em;
     font-weight: bold;
     border-bottom: 5px solid white;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
     display: flex;
     justify-content: center;
@@ -235,4 +236,17 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
   background-color: #FFD955;
+}
+
+#credit {
+    font-family: monospace;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#credit a {
+    color: #FFC72C;
 }
